FASTAPI OK, CORREGI lo de http://localhost:8000/api/complete_analysis - Agregue la /api/

--- a/frontend_client.html
+++ b/frontend_client.html
@@ -136,7 +136,7 @@
             
             try {
                 // Realizar la solicitud al servidor
-                const response = await fetch('http://localhost:8000/complete_analysis', {
+                const response = await fetch('http://localhost:8000/api/complete_analysis', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
